--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
         {
             "src": "src/server.ts",
             "use": "@vercel/node"
+        },
+        {
+            "src": "prisma/schema.prisma",
+            "use": "npx prisma generate"
         }
     ],
     "routes": [
